Implement login logic
Signed-off-by: Arnau Mora <arnyminerz@proton.me>